--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -3,7 +3,9 @@
 .about-content-wrapper {
     display: flex;
     flex-direction: column;
+    // align-items: center;
     margin-top: 25px;
+    // flex-wrap:wrap;
     @include small-screen {
         flex-direction: row;
         margin-top: 75px;
@@ -11,7 +13,7 @@
     .left-col {
         width: 100%;
         @include small-screen {
-            width: 40%;
+            width: 35%;
         }
 
         .highlights {
@@ -21,6 +23,7 @@
             @include glassmorphism-effect;
             h3{
                 text-align: center;
+                color: $yellow;
                 @include typography(20px, 500, 24px);
                 margin-bottom:10px;
                 @include small-screen {
@@ -45,8 +48,18 @@
             }
             .text {
                 padding-left: 10px;
+                color: $white;
+                opacity: 0.7;
                 @include typography(18px, 500, 24px);
-                color: $black-light;
+                span{
+                    color: $white;
+                    font-weight: bold;
+                }
+                    svg{
+                        padding-top:3px; 
+                        cursor: pointer;
+                        // color: $black;
+                    }
             }    
         }
     }
@@ -57,7 +70,8 @@
         margin-top: 25px;
         @include small-screen {
             margin-left: 70px;
-            width: calc(60% - 70px);
+            width:70%;
+            // width: calc(60% - 70px);
             text-align: left;
             margin-top: 0;
         }
@@ -71,12 +85,10 @@
         .call-to-action {
             margin: 0 auto;
             @include small-screen {
-                margin: 0;
+                margin: 30px 0;
+                
             }
         }
     }
 }
 
-.job-ticker-section{
-    width:100%;
-}
