--- a/src/components/skills/style.scss
+++ b/src/components/skills/style.scss
@@ -15,7 +15,7 @@
             position: absolute;
             font-size:22px;
             color:$yellow;
-            background-color:$black-light;
+            background-color:$black;
             text-transform: uppercase;
             padding: 0 10px;
             letter-spacing: 2px;
