--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -38,7 +38,7 @@
         margin-top: 20px;
         transform: scale(0.7);
         @include small-screen {
-            margin-top: 30px;
+            margin-top: 50px;
             transform: scale(1);
         }
         .social-icon {
@@ -48,6 +48,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            position: relative;
             color: $white;
             font-size: 18px;
             margin: 0 12.5px;
@@ -55,6 +56,31 @@
             &:hover{
                 box-shadow: 0 0 10px rgb(220,252,55), 0 0 40px rgb(220,252,55), 0 0 10px rgb(220,252,55); 
             }
+            &:hover .tooltips {
+                // left: 50%;
+                // right: auto;
+                top: -100%;
+                opacity: 1;
+              }
+
+            .tooltips {
+                position: absolute;
+                right: auto;
+                top: -50%;
+                left: 50%;
+                /* transform: translate(0, -70%); */
+                transform: translateY(-70%);
+                transform: translateX(-50%);
+                padding: 7px;
+                background-color:$white;
+                color:$black;
+                 border: 1px solid $yellow;
+                border-radius: 5px;
+                opacity: 0;
+                transition: all 0.2s ease-out;
+                @include typography(18px, 600, 22px);
+              }
+              
         }
 
     }
