--- a/src/components/education/education-card/style.scss
+++ b/src/components/education/education-card/style.scss
@@ -7,6 +7,7 @@
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 20px;
+  // flex-grow: 1;
   @include small-screen {
     width: calc(100% / 3);
     margin-right: 20px;
