changes in home page

--- a/src/components/intro/intro-content/style.scss
+++ b/src/components/intro/intro-content/style.scss
@@ -1,199 +1,109 @@
 @import "../../../style-config/mixins.scss",
-    "../../../style-config/variable.scss";
+  "../../../style-config/variable.scss";
 
-.intro-content {
-    flex-grow: 1;
+.home-content-wrapper {
+  width: 100%;
+  padding: 50px 0;
+  @include small-screen {
+    padding: 100px 0; 
+  }
+
+  .home {
     display: flex;
-    padding-top: 75px;
-    @include small-screen {
-        padding-top: 50px;
-        align-items: flex-end;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    h3{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color:$white;
+      @include typography(32px, 400, 20px);
+      @include small-screen {
+        @include typography(40px, 400, 30px); 
+      }
+      span{
+        margin-left: 7px;
+      }
     }
-    .layout {
+    h1 {
+      color:$white;
+      margin:10px auto;
+      @include typography(35px, 500, 30px);
+      @include small-screen {
+        @include typography(50px, 500, 30px); 
+        margin:20px auto;
+      }
+    }
+    h2 {
+      padding: 13px 0;
+      color:$yellow;
+      @include typography(27px, 400, 30px);
+      @include small-screen {
+        @include typography(35px, 400, 30px);
+        padding: 20px 0; 
+      }
+    }
+    .intro{
+     max-width:770px;
+      display: flex;
+      //flex-wrap: wrap;
+      flex-flow: row wrap;
+    p {
+        color:$white;
+        opacity: 0.8;
+        letter-spacing: .7px;
+      @include typography(16px, 400, 20px);
+      @include small-screen {
+        @include typography(19px, 400, 24px); 
+      }
+    }
+  }
+
+    .highlights {
+        width: 90px;
+        height: 90px;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        cursor:pointer;
+        border-radius: 50%;
+        margin:15px auto;
+        @include glassmorphism-effect;
         @include small-screen {
-            flex-direction: row;
+          width: 120px;
+          height: 120px;
         }
-        .left-col {
-            width: 100%;
+
+        .text {
+             padding-top: 10px;
+            @include typography(18px, 400, 20px);
+            color: $black-light;
             @include small-screen {
-                width: 45%;
+              @include typography(20px, 500, 24px);
             }
-            @include medium-screen {
-                padding-top: 55px;
-            }
-            @include large-screen {
-                padding-top: 0;
-                width: 37%;
-            }
-            .title {
-                display: flex;
-                flex-direction: column;
+            &:hover{
                 color: $white;
-                text-align: center;
-                @include small-screen {
-                    text-align: left;
-                }
-                .small-text {
-                    @include typography(24px, 400, 30px);
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    @include small-screen {
-                        justify-content: flex-start;
-                        @include typography(42px, 400, 48px);
-                    }
-                
-                    .icon {
-                        margin-left: 10px;
-                    }
-                }
-                .big-text {
-                    display: flex;
-                    @include typography(42px, 400, 52px);
-                    @include small-screen {
-                        @include typography(40px, 400, 72px);
-                    }
-                    span{
-                        margin-right:8px;
-                    }
-                }
-            }
-            p {
-                @include typography(14px, 400, 20px);
-                margin: 15px 0;
-                padding: 0 15px;
-                @include small-screen {
-                    @include typography(18px, 400, 24px);
-                    margin: 22px 0;
-                    padding: 0;
-                }
-            }
-            .call-to-action {
-                margin: 0 auto;
-                @include small-screen {
-                    margin: 0;
-                }
             }
         }
-        .right-col {
-            width: 100%;
+        .icon{
+            width: 30px;
+            height: 30px;
             display: flex;
-            align-items: flex-end;
-            position: relative;
-            flex-grow: 1;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background-color: $yellow;
+            font-size: 25px;
+            color: $black-light;
             @include small-screen {
-                width: 55%;
-                flex-grow: unset;
+              width: 35px;
+              height: 35px;
             }
-            @include large-screen {
-                width: 63%;
-            }
-            img {
-                width: 100%;
-                display: block;
-                margin-bottom: 30px;
-                @include small-screen {
-                    margin-bottom: 40px;
-                }
-                @include large-screen {
-                    margin-bottom: 50px;
-                    position: relative;
-                    right: -100px;
-                }
-            }
-            .highlights {
-                position: absolute;
-                border-radius: 6px;
-                @include glassmorphism-effect;
-                transform: scale(0.6);
-                @include small-screen {
-                    transform: scale(1);
-                }
-                .icon{
-                    width: 55px;
-                    height: 55px;
-                    min-width: 55px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    border-radius: 50%;
-                    background-color: $yellow;
-                    font-size: 24px;
-                    color: $black-light;
-                }
-                .text {
-                    padding: 0 10px;
-                    @include typography(18px, 400, 24px);
-                    color: $black-light;
-                    span {
-                        @include typography(18px, 400, 24px);
-                    }
-                }
-
-                &.horizontal {
-                    width: 208px;
-                    height: 95px;
-                    display: flex;
-                    align-items: center;
-                    top: 165px;
-                    left: -25px;
-                    opacity: 0;
-                    padding: 20px 10px 20px 20px;
-
-                    span {
-                        @include typography(18px, 700, 24px);
-                        display: block;
-                        text-align: center;
-                    }
-
-                    @include small-screen {
-                        top: 250px;
-                        opacity: 1;
-                        left: 0px;
-                    }
-                    @include medium-screen {
-                        top: 250px;
-                        left: 0px;
-                    }
-                    @include large-screen {
-                        top: 270px;
-                        left: 120px;
-                    }
-                }
-                &.verticle {
-                    width: 135px;
-                    height: 165px;
-                    min-height: 165px;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    top: 50px;
-                    right: 0;
-                    padding: 20px;
-                    padding-bottom: 10px;
-                    text-align: center;
-                    @include small-screen {
-                        top: 50px;
-                        right: 60px;
-                    }
-                    @include medium-screen {
-                        top: 50px;
-                        right: 60px;
-                    }
-                    @include large-screen {
-                        top: 85px;
-                        right: -10px;
-                    }
-                    .text {
-                        padding: 0 10px;
-                        @include typography(14px, 400, 18px);
-                        color: $black-light;
-                        margin-top: 10px;
-                    }
-                }
-            }
-        }
-    }
+        }    
+    }  
+  }
 }
+
