--- a/src/components/navigation-bar/style.scss
+++ b/src/components/navigation-bar/style.scss
@@ -1,27 +1,42 @@
-@import "../../../style-config/variable.scss";
-@import "../../../style-config/mixins.scss";
+@import "../../style-config/variable.scss";
+@import "../../style-config/mixins.scss";
 
 .top-navigation-bar {
-    width: 100%;
+    width: 100vw;
+    height: 70px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
-    @include small-screen {
-        margin-top: 60px;
+    position:fixed;
+    transform: translateY(0);
+    //margin-top: 0;
+    z-index:3;
+    &.top {
+        background: rgba(0, 0, 0, 0.25);
+        backdrop-filter: blur(3.5px);
+        -webkit-backdrop-filter: blur(3.5px);
+    }
+    &.show {
+        background-color:$black-light;
+    }
+    .content-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
     }
     .app-logo {
         width: 100px;
         flex-shrink: 0;
         h4{
-        color: $white;
+        color: $yellow;
+        span{
+            color:$white;
+        }
         }
         @include small-screen {
             width: 143px;
-        }
-        img {
-            width: 100%;
-            display: block;
         }
     }
     .mobile-menu {
@@ -35,16 +50,17 @@
         align-items: center;
         position: fixed;
         width: 100%;
-        height: 100%;
+        height:auto;
         top: 0;
         left: 0;
-        background-color: black;
+        background-color:$black;
         z-index: 9;
         display: none;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 35px;
+        padding:30px;
+        gap: 30px;
         @include small-screen {
             display: flex;
             flex-direction: row;
