--- a/src/components/projects/showcase/style.scss
+++ b/src/components/projects/showcase/style.scss
@@ -31,7 +31,7 @@
         height: 100%;
         object-fit: cover;
         border-radius: 10px;
-        object-position: center;
+        object-position:center;
       }
     }
 
@@ -110,6 +110,7 @@
 
     &:hover {
       transform: translateY(-10px);
+      //transform:translateY(-25%);
     //   box-shadow: 0 0 50px 4px rgba(0, 0, 0, 0.6);
       box-shadow: 0px 0px 33px -8px rgba(0, 0, 0, 0.75);
       filter: brightness(1.1);
