--- a/src/components/education/education-card/style.scss
+++ b/src/components/education/education-card/style.scss
@@ -48,9 +48,10 @@
         }
         span{
           svg{
-           width:27px;
+          width:27px;
           height: 27px;
           padding-top:8px;
+          margin-left: 4px;
           cursor:pointer;
 
           }
